Partial bootloader working

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.6)
-project(bgbootload)
+project(app
+        VERSION 1.0)
 
 set(CMAKE_C_STANDARD 99)
 add_definitions(-D__NO_SYSTEM_INIT)
@@ -17,32 +18,44 @@ include_directories(platform/CMSIS/Include)
 find_program(BGBUILD_CMD bin/bgbuild
         $ENV{HOME}/dev/tools/ble/v2.1.1.0/protocol/bluetooth_2.1)
 
+# find the bgfirmware utility. Firstly look in the parent directory/utils. Customise this for your project layout
+find_program(FIRMWARE_CMD bgfirmware
+        PATHS ${CMAKE_SOURCE_DIR}/../utils/build-debug)
+
 set(GATT_DB gatt_db)
 set(GATT_DIR ${CMAKE_SOURCE_DIR}/gatt)
 set(LOCALDIR ${CMAKE_SOURCE_DIR}/localdefs)
-set(OTA_SERVICE_UUID_FILE ${LOCALDIR}/ota_service.txt)
+find_file(OTA_SERVICE_UUID_FILE ota_service.txt
+        ${LOCALDIR}
+        ${CMAKE_SOURCE_DIR}/../bootload/localdefs)
+find_file(OTA_KEY_FILE ota_key.txt
+        ${LOCALDIR}
+        ${CMAKE_SOURCE_DIR}/../bootload/localdefs)
+
 set(BLE_STACK_DIR ${CMAKE_SOURCE_DIR}/libs/ble.v2.1.1.0)
 set(GATT_SRC ${GATT_DIR}/gatt.bgproj)
 set(GATT_XML ${GATT_DIR}/gatt.xml)
 set(GATT_I ${GATT_DIR}/gatt.i)
-set(GATT_OUTPUTS ${GATT_DIR}/${GATT_DB}.c ${GATT_DIR}/${GATT_DB}.h )
+set(GATT_OUTPUTS ${GATT_DIR}/${GATT_DB}.c ${GATT_DIR}/${GATT_DB}.h)
 set(BIN_FILE ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.bin)
+set(FMW_FILE ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.fmw)
 
 file(GLOB_RECURSE USER_SOURCES "src/*.c")
 file(GLOB_RECURSE USER_HEADERS "inc/*.h")
 file(STRINGS ${OTA_SERVICE_UUID_FILE} OTA_SERVICE)
+file(STRINGS ${OTA_KEY_FILE} OTA_KEY)
 
 IF (CMAKE_BUILD_TYPE MATCHES Debug)
     file(GLOB_RECURSE RTT_LIBS "libs/SEGGER_RTT_V612j/RTT/*.c")
     add_definitions(-DDEBUG)
 ENDIF (CMAKE_BUILD_TYPE MATCHES Debug)
 
-set(LIBRARIES ${BLE_STACK_DIR}/stack.a ${BLE_STACK_DIR}/binstack.o )
-SET(LINKER_SCRIPT bgbootload.ld)
+set(LIBRARIES ${BLE_STACK_DIR}/stack.a)
+SET(LINKER_SCRIPT app.ld)
 set(STARTUP "src/startup.c")
 #set_property(SOURCE ${STARTUP} PROPERTY LANGUAGE C)
 
-
+set(CMAKE_COM)
 # add library sources needed
 
 SET(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.ld)
@@ -52,7 +65,6 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_NAME}.m
 add_custom_command(
         OUTPUT ${GATT_OUTPUTS}
         DEPENDS ${GATT_SRC} ${GATT_XML}
-        COMMAND ${CMAKE_C_COMPILER} -E -C -P -C -DOTA_SERVICE_UUID=\\\"${OTA_SERVICE}\\\" - < ${GATT_XML} > ${GATT_I}
         COMMAND ${BGBUILD_CMD} -gn ${GATT_SRC})
 set_source_files_properties(${GATT_OUTPUTS} PROPERTIES GENERATED TRUE)
 
@@ -61,8 +73,11 @@ target_link_libraries(${PROJECT_NAME}.elf ${LIBRARIES})
 set_target_properties(${PROJECT_NAME}.elf PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})
 
 add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
-        COMMAND ${CMAKE_OBJCOPY} -Obinary --gap-fill 255 $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
         COMMENT "Building ${BIN_FILE}"
+        COMMAND ${CMAKE_OBJCOPY} -Obinary --gap-fill 255 $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
+        COMMENT "Building ${FMW_FILE}"
+        COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_NAME}.elf> ${PROJECT_NAME}.hex
+        COMMAND ${FIRMWARE_CMD} -o${FMW_FILE} -n${PROJECT_VERSION} -k${OTA_KEY} -s${OTA_SERVICE} ${PROJECT_NAME}.hex
         COMMAND ${OBJSIZE} ${PROJECT_NAME}.elf)
 
 
