Add BUILD scripts

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -43,7 +43,7 @@ set(FMW_FILE ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.fmw)
 file(GLOB_RECURSE USER_SOURCES "src/*.c")
 file(GLOB_RECURSE USER_HEADERS "inc/*.h")
 file(STRINGS ${OTA_SERVICE_UUID_FILE} OTA_SERVICE)
-file(STRINGS ${OTA_KEY_FILE} OTA_KEY)
+file(STRINGS ${OTA_KEY_FILE} OTA_KEY LIMIT_INPUT 64)
 
 IF (CMAKE_BUILD_TYPE MATCHES Debug)
     file(GLOB_RECURSE RTT_LIBS "libs/SEGGER_RTT_V612j/RTT/*.c")
