Hardened comms protocol - can not recover from dropped packets while maintaining high throughput.

--- a/bootload/CMakeLists.txt
+++ b/bootload/CMakeLists.txt
@@ -35,8 +35,9 @@ set(BIN_FILE ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.bin)
 
 file(GLOB_RECURSE USER_SOURCES "src/*.c")
 file(GLOB_RECURSE USER_HEADERS "inc/*.h")
-file(STRINGS ${OTA_SERVICE_UUID_FILE} OTA_SERVICE)
+file(STRINGS ${OTA_SERVICE_UUID_FILE} OTA_SERVICE_UUID)
 file(STRINGS ${OTA_KEY_FILE} OTA_KEY LIMIT_INPUT 64)
+configure_file(${GATT_XML} ${GATT_I})
 
 IF (CMAKE_BUILD_TYPE MATCHES Debug)
     file(GLOB_RECURSE RTT_LIBS "libs/SEGGER_RTT_V612j/RTT/*.c")
@@ -57,8 +58,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_NAME}.m
 
 add_custom_command(
         OUTPUT ${GATT_OUTPUTS}
-        DEPENDS ${GATT_SRC} ${GATT_XML}
-        COMMAND ${CMAKE_C_COMPILER} -E -C -P -C -DOTA_SERVICE_UUID=\\\"${OTA_SERVICE}\\\" - < ${GATT_XML} > ${GATT_I}
+        DEPENDS ${GATT_SRC} ${GATT_XML} ${GATT_I}
         COMMAND ${BGBUILD_CMD} -gn ${GATT_SRC})
 set_source_files_properties(${GATT_OUTPUTS} PROPERTIES GENERATED TRUE)
 
